Fix spacing Section

--- a/app/assets/stylesheets/redesign/pages/_gratitude-page.scss
+++ b/app/assets/stylesheets/redesign/pages/_gratitude-page.scss
@@ -28,7 +28,7 @@
   }
 
   .gratitude-promo-app {
-    margin-top: 40px;
+    margin-top: 80px;
     background: url('_backgrounds/marble-texture-bg.jpg');
     background-size: 150%;
     padding: 20px 0;
